Wrap nav around a nav-container, fix scrolling

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,6 +28,11 @@
   }
 }
 
+#nav-container {
+  width: 100%;
+  overflow: hidden;
+}
+
 nav {
   display: flex;
   justify-content: flex-start;
@@ -37,7 +42,6 @@ nav {
   font-weight: 600;
   font-size: 14px;
   padding: 13px 16px 13px 0;
-  width: 100%;
   overflow: auto;
   white-space: nowrap;
 }
